testsuite/good/ASimpleTypeInterface.flux
type ASimpleTypeInterface {
	void method1();
	int method2();
}