testsuite/bad/UsingReservedIdentifier1.flux
type UsingReservedIdentifier1 {
   void _notAllowed();
}